# FPGA-Synth

./: .gitignore  fpga_synth.xpr  lut_midi.py  lut_midi_package.vhd  note_lut.h  vhdl_ls.toml
archive/arduino_midi/: midi_transmitter.ino
cpp_source/: midi_uart.cpp  testbench.cpp  testbench.hpp
current_TLD/TLD/: TLD.xpr  checkpoint_1.dcp  piss_point.dcp
experiment_i2s_output/: experiment_i2s_output.tcl  experiment_i2s_output.xpr  experiment_i2s_output_def_val.txt  experiment_i2s_output_dump.txt
experiment_i2s_output/experiment_i2s_output.srcs/: component.xml
fpga_synth.cache/wt/: gui_handlers.wdf  java_command_handlers.wdf  project.wpc  synthesis.wdf  webtalk_pa.xml
fpga_synth.hw/hw_1/: hw.xml
fpga_synth.ip_user_files/mem_init_files/: blk_diag1.bda  blk_diag1_auto_pc_0.h  blk_diag1_auto_pc_0_sc.h
fpga_synth.runs/.jobs/: vrs_config_20.xml  vrs_config_35.xml  vrs_config_38.xml  vrs_config_39.xml  vrs_config_42.xml  vrs_config_45.xml  vrs_config_46.xml  vrs_config_47.xml  vrs_config_50.xml  vrs_config_52.xml  vrs_config_53.xml  vrs_config_54.xml  vrs_config_55.xml  vrs_config_56.xml  vrs_config_57.xml  vrs_config_58.xml  vrs_config_59.xml  vrs_config_62.xml  vrs_config_67.xml  vrs_config_68.xml  vrs_config_72.xml  vrs_config_73.xml  vrs_config_75.xml  vrs_config_76.xml  vrs_config_78.xml  vrs_config_81.xml  vrs_config_83.xml  vrs_config_85.xml
fpga_synth.runs/blk_diag1_audio_mixer_0_0_synth_1/: .vivado.begin.rst  blk_diag1_audio_mixer_0_0.tcl  gen_run.xml  htr.txt  (+8 more)
i2s_testbench/: i2s_testbench.xpr
midi_hls/: component.xml
midi_signal_emulator/: CMakeLists.txt  uart_tx.c  uart_tx.pio
new_intergration/: integration_hw.xsa  new_intergration.xpr  partial_integration.dcp
oscillator_proto/: checkpoint_1.dcp  fpga_synth.xpr
top_level/: i2s_module_tb_behav.wcfg  i2x_transmitter.xpr
(+1708 files in other folders)
